// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ApiService > getQuoteV2 > gets a quote 1`] = `
{
  "amount": "10000",
  "dcaEnabled": false,
  "dcaV2Enabled": false,
  "destAsset": "ETH",
  "destChain": "Ethereum",
  "isVaultSwap": true,
  "quotes": [
    {
      "egressAmount": "2",
      "id": "string",
      "intermediateAmount": "1",
    },
  ],
  "srcAsset": "BTC",
  "srcChain": "Bitcoin",
}
`;

exports[`ApiService > getQuoteV2 > gets a quote 2`] = `
[
  "/v2/quote",
  {
    "baseURL": "https://swapperoo.org",
    "headers": {
      "X-Chainflip-Sdk-Version": "1.0-test",
    },
    "params": {
      "amount": "10000",
      "dcaEnabled": "false",
      "dcaV2Enabled": "false",
      "destAsset": "ETH",
      "destChain": "Ethereum",
      "isOnChain": "false",
      "isVaultSwap": "true",
      "srcAsset": "BTC",
      "srcChain": "Bitcoin",
    },
    "signal": undefined,
  },
]
`;

exports[`ApiService > getQuoteV2 > gets a quote for a vault swap 1`] = `
{
  "amount": "10000",
  "dcaEnabled": true,
  "dcaV2Enabled": false,
  "destAsset": "ETH",
  "destChain": "Ethereum",
  "isVaultSwap": true,
  "quotes": [
    {
      "egressAmount": "2",
      "id": "string",
      "intermediateAmount": "1",
    },
  ],
  "srcAsset": "BTC",
  "srcChain": "Bitcoin",
}
`;

exports[`ApiService > getQuoteV2 > gets a quote for a vault swap 2`] = `
[
  "/v2/quote",
  {
    "baseURL": "https://swapperoo.org",
    "headers": {
      "X-Chainflip-Sdk-Version": "1.0-test",
    },
    "params": {
      "amount": "10000",
      "dcaEnabled": "true",
      "dcaV2Enabled": "false",
      "destAsset": "ETH",
      "destChain": "Ethereum",
      "isOnChain": "false",
      "isVaultSwap": "true",
      "srcAsset": "BTC",
      "srcChain": "Bitcoin",
    },
    "signal": undefined,
  },
]
`;

exports[`ApiService > getQuoteV2 > gets a quote with a broker commission 1`] = `
{
  "amount": "10000",
  "brokerCommissionBps": 15,
  "dcaEnabled": false,
  "dcaV2Enabled": false,
  "destAsset": "ETH",
  "destChain": "Ethereum",
  "quotes": [
    {
      "egressAmount": "2",
      "id": "string",
      "intermediateAmount": "1",
    },
  ],
  "srcAsset": "BTC",
  "srcChain": "Bitcoin",
}
`;

exports[`ApiService > getQuoteV2 > gets a quote with a broker commission 2`] = `
[
  "/v2/quote",
  {
    "baseURL": "https://swapperoo.org",
    "headers": {
      "X-Chainflip-Sdk-Version": "1.0-test",
    },
    "params": {
      "amount": "10000",
      "brokerCommissionBps": "15",
      "dcaEnabled": "false",
      "dcaV2Enabled": "false",
      "destAsset": "ETH",
      "destChain": "Ethereum",
      "isOnChain": "false",
      "isVaultSwap": "false",
      "srcAsset": "BTC",
      "srcChain": "Bitcoin",
    },
    "signal": undefined,
  },
]
`;

exports[`ApiService > getQuoteV2 > gets a quote with a broker commission and affiliate brokers 1`] = `
{
  "affiliateBrokers": [
    {
      "account": "cFLdocJo3bjT7JbT7R46cA89QfvoitrKr9P3TsMcdkVWeeVLa",
      "commissionBps": 10,
    },
    {
      "account": "cFLdopvNB7LaiBbJoNdNC26e9Gc1FNJKFtvNZjAmXAAVnzCk4",
      "commissionBps": 20,
    },
  ],
  "amount": "10000",
  "brokerCommissionBps": 15,
  "dcaEnabled": false,
  "dcaV2Enabled": false,
  "destAsset": "ETH",
  "destChain": "Ethereum",
  "quotes": [
    {
      "egressAmount": "2",
      "id": "string",
      "intermediateAmount": "1",
    },
  ],
  "srcAsset": "BTC",
  "srcChain": "Bitcoin",
}
`;

exports[`ApiService > getQuoteV2 > gets a quote with a broker commission and affiliate brokers 2`] = `
[
  "/v2/quote",
  {
    "baseURL": "https://swapperoo.org",
    "headers": {
      "X-Chainflip-Sdk-Version": "1.0-test",
    },
    "params": {
      "amount": "10000",
      "brokerCommissionBps": "45",
      "dcaEnabled": "false",
      "dcaV2Enabled": "false",
      "destAsset": "ETH",
      "destChain": "Ethereum",
      "isOnChain": "false",
      "isVaultSwap": "false",
      "srcAsset": "BTC",
      "srcChain": "Bitcoin",
    },
    "signal": undefined,
  },
]
`;

exports[`ApiService > getQuoteV2 > gets a quote with ccm params 1`] = `
{
  "amount": "10000",
  "ccmParams": {
    "gasBudget": "12345",
    "messageLengthBytes": 100,
  },
  "dcaEnabled": true,
  "dcaV2Enabled": false,
  "destAsset": "ETH",
  "destChain": "Ethereum",
  "quotes": [
    {
      "egressAmount": "2",
      "id": "string",
      "intermediateAmount": "1",
    },
  ],
  "srcAsset": "BTC",
  "srcChain": "Bitcoin",
}
`;

exports[`ApiService > getQuoteV2 > gets a quote with ccm params 2`] = `
[
  "/v2/quote",
  {
    "baseURL": "https://swapperoo.org",
    "headers": {
      "X-Chainflip-Sdk-Version": "1.0-test",
    },
    "params": {
      "amount": "10000",
      "ccmGasBudget": "12345",
      "ccmMessageLengthBytes": "100",
      "dcaEnabled": "true",
      "dcaV2Enabled": "false",
      "destAsset": "ETH",
      "destChain": "Ethereum",
      "isOnChain": "false",
      "isVaultSwap": "false",
      "srcAsset": "BTC",
      "srcChain": "Bitcoin",
    },
    "signal": undefined,
  },
]
`;
